read me updates

--- a/report/project.tex
+++ b/report/project.tex
@@ -48,20 +48,12 @@
 
 \title{Dynamic Model Construction for Efficient Classification}
 
-% \author{
-%     Jaejun Lee \\
-%     School of Computer Science\\
-%     University of Waterloo\\
-%     Waterloo, ON, N2L 3G1 \\
-%     \texttt{j474lee@uwaterloo.ca} \\
-% }
-
 \author{
-    BLINDED \\
+    Jaejun Lee \\
     School of Computer Science\\
     University of Waterloo\\
     Waterloo, ON, N2L 3G1 \\
-    \texttt{BLINDED@uwaterloo.ca} \\
+    \texttt{j474lee@uwaterloo.ca} \\
 }
 
 \begin{document}
